# llm_expert_metier

./: .env.example  .gitignore  Dockerfile  README.md  aiexpertlawyer.py  aijudge.py  db_processing.ipynb  explore_db.py  fill_rag.py  interface.py  langchain_processing.ipynb  main.py  mytools.py  optim_prompt.py  pyproject.toml  rag_enhanced_prompt.py  requirements.txt
benchmark_data/: QA.json
interface/: index.html
mohamad_test/: prollm.ipynb  requirements.txt  run.sh  test2llm.ipynb  test3llm.py  testllm.py
src/: aiexpertlawyer.py  aijudge.py  chunker.py  fill_rag.py  interface.py  main.py  mytools.py  optim_prompt.py
xavier_test/: my_test.py  my_test_marimo.py
