[project]
name = "llm-expert-metier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "marimo>=0.15.2",
    "pypdf>=6.0.0",
    "uvicorn>=0.35.0",
]
