[project]
name = "llm-expert-metier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-chroma>=0.2.5",
    "langchain-google-genai>=2.1.10",
    "openai>=1.107.0",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "update>=0.0.1",
    "marimo>=0.15.2",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
